fix bugs on welcome screen on mobile

--- a/src/project/product-list/styles/hero.pcss
+++ b/src/project/product-list/styles/hero.pcss
@@ -162,7 +162,7 @@
         font-size: 54px;
         text-align: center;
         margin-top: 30px;
-        padding: 0px 65px;
+        padding: 0px 80px;
         position: relative;
       }
       @media(--tabletandless) {
@@ -586,6 +586,7 @@
       bottom: 0;
       left: 0;
       background: #31bebc;
+      border: none;
     }
     @media(--tabletandless) {
       display: inline-block;
@@ -597,5 +598,6 @@
       bottom: 0;
       left: 0;
       background: #31bebc;
+      border: none;
     }
   }
